--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devaice-widet, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./pages/indexs.css">
 </head>
 
-<body class="body_content">
+<body class="body">
     <div class="page">
         <header class="header">
-            <div class="header_logo"></div>
-            <span class="header_leng">RU EN</span>
+            <div class="header__logo"></div>
+            <p class="header__leng">RU EN </p>
         </header>
 
         <main class="main">
             <section class="lead">
-                <h1 class="lead_title">Путешествия по России</h1>
-                <p class="lead_subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img src="./img/image.jpg" class="lead-imege" alt="Девушка в поезде">
-                <p class="lead-ception"> ваша полка — верхняя </p>
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <img src="./img/image.jpg" class="lead__imege" alt="Девушка в поезде">
+                <p class="lead__ception"> ваша полка — верхняя </p>
             </section>
 
             <section class="intro">
-                <h2 class="intro-title"> Чего мы там не видели?</h2>
-                <p class="intro-text"> По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+                <h2 class="intro__title"> Чего мы там не видели?</h2>
+                <p class="intro__text"> По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                     провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это
                     целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
                     увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как,
                     например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в
                     свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
                     интересные места, достойные вашего отпуска.</p>
-                    <ul class="intro-list">
-                        <li class="intro-list-item"> Часовых поясов 11</li>
-                        <li class="intro-list-item"> Объектов природного наследия ЮНЕСКО 12 </li>
-                        <li class="intro-list-item"> Объектов культурного наследия ЮНЕСКО 16 </li>
-                        <li class="intro-list-item"> Природных заповедников 105 </li>
-                        <li class="intro-list-item"> Аэропортов 241 105 </li>
+                    <ul class="intro__list">
+                        <li class="intro__list-item"> Часовых поясов 11</li>
+                        <li class="intro__list-item"> Объектов природного наследия ЮНЕСКО 12 </li>
+                        <li class="intro__list-item"> Объектов культурного наследия ЮНЕСКО 16 </li>
+                        <li class="intro__list-item"> Природных заповедников 105 </li>
+                        <li class="intro__list-item"> Аэропортов 241 105 </li>
                     </ul>
             </section>
 
