--- a/index.html
+++ b/index.html
@@ -40,10 +40,108 @@
                     </ul>
             </section>
 
+            <section class="poto-grid">
+                <img src="./img/item/__item.jpg" class="poto-grid__item" ait="окно поезда">
+                <img src="./img/item/__item (1).jpg" class="poto-grid__item" ait="облака">
+                <img src="./img/item/__item (2).jpg" class="poto-grid__item" ait="собака на стоге">
+                <img src="./img/item/__item (3).jpg" class="poto-grid__item" ait="заснеженный лес">
+                <img src="./img/item/__item (4).jpg" class="poto-grid__item" ait="колесо автомобиля на льду">
+                <img src="./img/item/__item (5).jpg" class="poto-grid__item" ait="побережье">
+                <img src="./img/item/__item (6).jpg" class="poto-grid__item" ait="горы">
+                <img src="./img/item/__item (7).jpg" class="poto-grid__item" ait="дорожный знак">
+                <img src="./img/item/__item (8).jpg" class="poto-grid__item" ait="вид сверху на горы">
+                <img src="./img/item/__item (9).jpg" class="poto-grid__item" ait="гора в далеке">
+                <img src="./img/item/__item (10).jpg" class="poto-grid__item" ait="горный хребет">
+                <img src="./img/item/__item (11).jpg" class="poto-grid__item" ait="облака в горах">
+            </section>
+
+            <section class="places">
+                <div class="place">
+                    <h2 class="place__title">Куршская коса</h2>
+                    <img class="place__image" src="./img/plece/park-kosa.jpg" alt="Куршская коса">
+                    <div class="place__website">
+                        <p class="place__website-url">URL</p>
+                        <a class="place__website-link" href="http://park-kosa.ru/">park-kosa.ru</a>
+                    </div>
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря..</p>
+                    </div>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">Кольский</h2>
+                    <img class="place__image" src="./img/plece/koisky.jpg" alt="Кольский">
+                    <div class="place__website">
+                        <p class="place__website-url">URL</p>
+                        <a class="place__website-link" href="https://poehali.club/na-kolskij-poluostrov-s-national-geographic-rossiya/">National Geographic</a>
+                    </div>
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
+                            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                        <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                            в Мурманск.</p>
+                    </div>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">Алтай</h2>
+                    <img class="place__image" src="./img/plece/altay.jpg" alt="Алтай">
+                    <div class="place__website">
+                        <p class="place__website-url">URL</p>
+                        <a class="place__website-link" href="https://tonkosti.ru/%D0%90%D0%BB%D1%82%D0%B0%D0%B9">Altay</a>
+                    </div>
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
+                            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+                        <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                    </div>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">Зимний Байкал</h2>
+                    <img class="place__image" src="./img/plece/baikal.jpg" alt="Зимний Байкал">
+                    <div class="place__website">
+                        <p class="place__website-url">URL</p>
+                        <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                    </div>
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
+                            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                    </div>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">Карелия</h2>
+                    <img class="place__image" src="./img/plece/kareliya.jpg" alt="Карелия">
+                    <div class="place__website">
+                        <p class="place__website-url">URL</p>
+                        <a class="place__website-link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
+                    </div>
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+                            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="cover">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                    <img class="cover__bachground" src="./img/background.jpg" alt="Поезда на жд путях">
+                    <h3 class="cover__title">До Байкала <на собаках></h3>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </a>
+            </section>
         </main>
+        <footer class="footer">
+            <ul class="footer__links">
+                    <li><a class="footer__link" href="https://www.google.ru/maps/">Карты</a></li>
+                    <li><a class="footer__link" href="https://www.gismeteo.ru/">Погода</a></li>
+                    <li><a class="footer__link" href="https://t.rasp.yandex.ru/">Расписание</a></li>
+                    <li><a class="footer__link" href="https://otmetim.info/c/">Календарь</a></li>
+                    <li><a class="footer__link" href="https://www.russiadiscovery.ru/tours/">Путешествия</a></li>
+                </ul>           
+            <p class="footer__copyright">© 2020. Irina Beznosova</p>
+        </footer> 
 
-        <footer></footer>
-    </div>
-</body>
-
-</html>
+        </body>
+            
+    </html>
